; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/x86/extr_vf_limiter_init.c_ff_limiter_init_x86.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/x86/extr_vf_limiter_init.c_ff_limiter_init_x86.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@ff_limiter_8bit_sse2 = common dso_local global i32 0, align 4
@ff_limiter_16bit_sse4 = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ff_limiter_init_x86(%struct.TYPE_3__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = call i32 (...) @av_get_cpu_flags()
  store i32 %6, i32* %5, align 4
  %7 = load i32, i32* %5, align 4
  %8 = call i64 @EXTERNAL_SSE2(i32 %7)
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %18

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = icmp sle i32 %11, 8
  br i1 %12, label %13, label %17

13:                                               ; preds = %10
  %14 = load i32, i32* @ff_limiter_8bit_sse2, align 4
  %15 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %16 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  br label %17

17:                                               ; preds = %13, %10
  br label %18

18:                                               ; preds = %17, %2
  %19 = load i32, i32* %5, align 4
  %20 = call i64 @EXTERNAL_SSE4(i32 %19)
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %22, label %30

22:                                               ; preds = %18
  %23 = load i32, i32* %4, align 4
  %24 = icmp sgt i32 %23, 8
  br i1 %24, label %25, label %29

25:                                               ; preds = %22
  %26 = load i32, i32* @ff_limiter_16bit_sse4, align 4
  %27 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %28 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %27, i32 0, i32 0
  store i32 %26, i32* %28, align 4
  br label %29

29:                                               ; preds = %25, %22
  br label %30

30:                                               ; preds = %29, %18
  ret void
}

declare dso_local i32 @av_get_cpu_flags(...) #1

declare dso_local i64 @EXTERNAL_SSE2(i32) #1

declare dso_local i64 @EXTERNAL_SSE4(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
